--- a/src/components/busline/BuslineOverview.css
+++ b/src/components/busline/BuslineOverview.css
@@ -22,6 +22,7 @@
 .searchfield {
     padding-left: 30px;
     border: 0px;
+    line-height: 1.75em !important;
 }
 
 .tableheader {
@@ -44,4 +45,9 @@
 
 .tablerow:hover {
     background-color: lightgray;
+}
+
+.tablebutton {
+    background-color: grey !important;
+    line-height: 0 !important;
 }
