--- a/src/components/busline/BuslineOverview.css
+++ b/src/components/busline/BuslineOverview.css
@@ -51,3 +51,9 @@
     background-color: grey !important;
     line-height: 0 !important;
 }
+
+.scheduleButton {
+    background-color: grey !important;
+    font-weight: normal !important;
+    text-transform: none !important;
+}
